--- a/todo/tasks/templates/tasks/list.html
+++ b/todo/tasks/templates/tasks/list.html
@@ -1,5 +1,15 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/todo.css' %}">
+{% if request.user.is_authenticated %}
+<p>{{request.user}}</p>
+<form method="post" action="{% url 'logout' %}" style="display:inline;">
+    {% csrf_token %}
+    <button type="submit">Logout</button>
+</form>
+{%else%}
+<a href="{% url 'login' %}">Login</a>
+{%endif%}
+
 
 <div class="container">
   <div class="app-header">
